--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
-
-<html>
-<<<<<<< HEAD
-    <p>abhi</p>
-=======
-    <p></p>
->>>>>>> newone
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TIC TAC TOE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="dark-mode">
+    <div class="theme-toggle">
+        <i class="fas fa-sun"></i>
+    </div>
+    
+    <h1>TIC TAC TOE</h1>
+    <div class="container">
+        <div class="board">
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+            <button class="btn1"></button>
+        </div>
+        <button class="reset">Reset Game</button>
+    </div>
+    <div class="winnerdiv">
+        <span class="winner"></span>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
